--- a/OPTmotors/misc/DIVAndTestForStagYYmodels.ipynb
+++ b/OPTmotors/misc/DIVAndTestForStagYYmodels.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "readField (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mÉchec du démarrage du Kernel. \n",
+      "\u001b[1;31mImpossible de démarrer le noyau « Julia 1.11.3 » en raison d’un délai d’attente d’utilisation des ports. \n",
+      "\u001b[1;31mPour plus d’informations, consultez Jupyter <a href='command:jupyter.viewOutput'>log</a>."
+     ]
     }
    ],
    "source": [
