added local inv for taylor

--- a/OPTmotors/misc/inverse_coef_Taylor.ipynb
+++ b/OPTmotors/misc/inverse_coef_Taylor.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mÉchec du démarrage du Kernel. \n",
+      "\u001b[1;31mImpossible de démarrer le noyau « Julia 1.11.3 » en raison d’un délai d’attente d’utilisation des ports. \n",
+      "\u001b[1;31mPour plus d’informations, consultez Jupyter <a href='command:jupyter.viewOutput'>log</a>."
+     ]
+    }
+   ],
    "source": [
     "using Symbolics\n",
     "#import Pkg; Pkg.add(\"Tullio\")"
@@ -240,32 +251,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/latex": [
-       "$$ \\begin{equation}\n",
-       "\\left[\n",
-       "\\begin{array}{ccc}\n",
-       "0 & 1 & 0 \\\\\n",
-       "\\frac{\\frac{1}{2}}{{\\Delta}x} & 0 & \\frac{\\frac{-1}{2}}{{\\Delta}x} \\\\\n",
-       "\\frac{1}{{\\Delta}x^{2}} & \\frac{-2}{{\\Delta}x^{2}} & \\frac{1}{{\\Delta}x^{2}} \\\\\n",
-       "\\end{array}\n",
-       "\\right]\n",
-       "\\end{equation}\n",
-       " $$"
-      ],
-      "text/plain": [
-       "3×3 Matrix{Num}:\n",
-       "           0            1             0\n",
-       " (1//2) / Δx            0  (-1//2) / Δx\n",
-       "  1 / (Δx^2)  -2 / (Δx^2)    1 / (Δx^2)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mÉchec du démarrage du Kernel. \n",
+      "\u001b[1;31mImpossible de démarrer le noyau « Julia 1.11.3 » en raison d’un délai d’attente d’utilisation des ports. \n",
+      "\u001b[1;31mPour plus d’informations, consultez Jupyter <a href='command:jupyter.viewOutput'>log</a>."
+     ]
     }
    ],
    "source": [
