pacakge to installed

--- a/OPTmotors/misc/2DwaveEquation.ipynb
+++ b/OPTmotors/misc/2DwaveEquation.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mÉchec du démarrage du Kernel. \n",
+      "\u001b[1;31mImpossible de démarrer le noyau « Julia 1.11.3 » en raison d’un délai d’attente d’utilisation des ports. \n",
+      "\u001b[1;31mPour plus d’informations, consultez Jupyter <a href='command:jupyter.viewOutput'>log</a>."
+     ]
+    }
+   ],
    "source": [
     "using Symbolics"
    ]
@@ -189,9 +200,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.10.2",
+   "display_name": "Julia 1.11.3",
    "language": "julia",
-   "name": "julia-1.10"
+   "name": "julia-1.11"
   },
   "language_info": {
    "file_extension": ".jl",
