--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -10,17 +10,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule Glib_jll with build ID fafbfcfd-2507-058a-d0ce-4ef32a5f2924 is missing from the cache.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean Glib_jll [7746bdde-850d-59dc-9ae8-88ece973131d] does not support precompilation but is imported by a module that does.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:2541\u001b[39m\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule Glib_jll with build ID fafbfcfd-2507-058a-d0ce-4ef32a5f2924 is missing from the cache.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean Glib_jll [7746bdde-850d-59dc-9ae8-88ece973131d] does not support precompilation but is imported by a module that does.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:2541\u001b[39m\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule Glib_jll with build ID fafbfcfd-2507-058a-d0ce-4ef32a5f2924 is missing from the cache.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean Glib_jll [7746bdde-850d-59dc-9ae8-88ece973131d] does not support precompilation but is imported by a module that does.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:2541\u001b[39m\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule gdk_pixbuf_jll with build ID ffffffff-ffff-ffff-104c-a1b72a2f11aa is missing from the cache.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean gdk_pixbuf_jll [da03df04-f53b-5353-a52f-6a8b0620ced0] does not support precompilation but is imported by a module that does.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:2541\u001b[39m\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule Libiconv_jll with build ID fafbfcfd-6b6b-b22b-3728-7fe632fa748e is missing from the cache.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean Libiconv_jll [94ce4f54-9a6c-5748-9c1c-f9c7231a4531] does not support precompilation but is imported by a module that does.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:2541\u001b[39m\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule Glib_jll with build ID fafbfcfd-2507-058a-d0ce-4ef32a5f2924 is missing from the cache.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean Glib_jll [7746bdde-850d-59dc-9ae8-88ece973131d] does not support precompilation but is imported by a module that does.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:2541\u001b[39m\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule Cairo_jll with build ID fafbfcfd-67dc-a790-3f31-1dc85c626d29 is missing from the cache.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean Cairo_jll [83423d85-b0ee-5818-9007-b63ccbeb887a] does not support precompilation but is imported by a module that does.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:2541\u001b[39m\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "quasiNumericalOperatorConstruction (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
