--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "85b7f81f",
    "metadata": {},
    "outputs": [
@@ -10,41 +10,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n",
-      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule Glib_jll with build ID fafbfcfd-2507-058a-d0ce-4ef32a5f2924 is missing from the cache.\n",
-      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean Glib_jll [7746bdde-850d-59dc-9ae8-88ece973131d] does not support precompilation but is imported by a module that does.\n",
-      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:2541\u001b[39m\n",
-      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule Glib_jll with build ID fafbfcfd-2507-058a-d0ce-4ef32a5f2924 is missing from the cache.\n",
-      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean Glib_jll [7746bdde-850d-59dc-9ae8-88ece973131d] does not support precompilation but is imported by a module that does.\n",
-      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:2541\u001b[39m\n",
-      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule Glib_jll with build ID fafbfcfd-2507-058a-d0ce-4ef32a5f2924 is missing from the cache.\n",
-      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean Glib_jll [7746bdde-850d-59dc-9ae8-88ece973131d] does not support precompilation but is imported by a module that does.\n",
-      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:2541\u001b[39m\n",
-      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule gdk_pixbuf_jll with build ID ffffffff-ffff-ffff-104c-a1b72a2f11aa is missing from the cache.\n",
-      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean gdk_pixbuf_jll [da03df04-f53b-5353-a52f-6a8b0620ced0] does not support precompilation but is imported by a module that does.\n",
-      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:2541\u001b[39m\n",
-      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule Libiconv_jll with build ID fafbfcfd-6b6b-b22b-3728-7fe632fa748e is missing from the cache.\n",
-      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean Libiconv_jll [94ce4f54-9a6c-5748-9c1c-f9c7231a4531] does not support precompilation but is imported by a module that does.\n",
-      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:2541\u001b[39m\n",
-      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule Glib_jll with build ID fafbfcfd-2507-058a-d0ce-4ef32a5f2924 is missing from the cache.\n",
-      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean Glib_jll [7746bdde-850d-59dc-9ae8-88ece973131d] does not support precompilation but is imported by a module that does.\n",
-      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:2541\u001b[39m\n",
-      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule Cairo_jll with build ID fafbfcfd-67dc-a790-3f31-1dc85c626d29 is missing from the cache.\n",
-      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean Cairo_jll [83423d85-b0ee-5818-9007-b63ccbeb887a] does not support precompilation but is imported by a module that does.\n",
-      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:2541\u001b[39m\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "quasiNumericalOperatorConstruction (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "\n",
+    "# Nobuaki Fuji @ipgp September 2025\n",
     "using Pkg, BenchmarkTools\n",
     "\n",
     "\n",
     "cd(@__DIR__)\n",
     "Pkg.activate(\"../..\")\n",
     "\n",
-    "using Revise\n",
-    "using ProfileView\n",
+    "# below are the tools to debug the code\n",
+    "using Revise # this is very cool since \n",
+    "using Profile, StatProfilerHTML\n",
     "\n",
     "\n",
     "include(\"../src/imageReader.jl\") # read 2D images for models\n",
@@ -54,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "0ae67625",
    "metadata": {},
    "outputs": [
@@ -77,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "abcee459",
    "metadata": {},
    "outputs": [],
@@ -94,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "29587f11",
    "metadata": {},
    "outputs": [
@@ -115,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "7bedc499",
    "metadata": {},
    "outputs": [],
@@ -165,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "2a2ab3be",
    "metadata": {},
    "outputs": [
@@ -185,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "8cd30c3a",
    "metadata": {},
    "outputs": [
@@ -221,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "98b5b8ba",
    "metadata": {},
    "outputs": [
@@ -243,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "6596fcab",
    "metadata": {},
    "outputs": [
@@ -270,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "13ddcb3b",
    "metadata": {},
    "outputs": [
@@ -290,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "8861235b",
    "metadata": {},
    "outputs": [
@@ -332,14 +321,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "0a8e6de0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "safeget (generic function with 3 methods)"
+       "safeget (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -371,85 +360,126 @@
      "output_type": "stream",
      "text": [
       "(bigα, varM) = (Any[Any[(node = -(v(x, y)^2), nᶜ = CartesianIndex(1, 1, 1), n = CartesianIndex(3, 1, 1)), (node = -(v(x, y)^2), nᶜ = CartesianIndex(1, 1, 1), n = CartesianIndex(1, 3, 1)), (node = 1, nᶜ = CartesianIndex(1, 1, 1), n = CartesianIndex(1, 1, 3))];;], Any[v₁ v₂ v₃ v₄ v₅ v₆ v₇ v₈ v₉ v₁ v₂ v₃ v₄ v₅ v₆ v₇ v₈ v₉ v₁ v₂ v₃ v₄ v₅ v₆ v₇ v₈ v₉])\n",
-      "modifiedμ[iCoord] = output[\"modμ\"] = Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]\n",
-      "modifiedμ[iCoord] = output[\"modμ\"] = Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]\n",
-      "modifiedμ[iCoord] = output[\"modμ\"] = Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Info: File /Users/nobuaki/Documents/Github/flexibleDSM/data/taylorCoefInv/taylorCoefInv_ed948170.jld2 does not exist. Producing it now...\n",
-      "└ @ DrWatson /Users/nobuaki/.julia/packages/DrWatson/dUlaU/src/saving_files.jl:106\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "modifiedμ = Any[Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0], Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0], Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]]\n",
-      "size(modifiedμ) = (3,)\n"
-     ]
-    },
-    {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `pointsIndex` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `pointsIndex` not defined in `Main`\n",
-      "Suggestion: check for spelling errors or missing imports.\n",
-      "\n",
-      "Stacktrace:\n",
-      "  [1] macro expansion\n",
-      "    @ ./show.jl:1232 [inlined]\n",
-      "  [2] TaylorCoefInversion(numberOfLs::Int64, numberOfEtas::Int64, multiOrdersIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, pointsIndices::Array{Vector{Int64}, 3}, Δ::Tuple{Float64, Float64, Float64}, μ_oneD::Int64, WorderBspline::Vector{Int64}, modifiedμ::Vector{Any})\n",
-      "    @ Main ~/Documents/Github/flexibleDSM/OPTmotors/src/OPTnewEngines.jl:225\n",
-      "  [3] TaylorCoefInversion(coefInversionDict::Dict{String, Any})\n",
-      "    @ Main ~/Documents/Github/flexibleDSM/OPTmotors/src/OPTnewEngines.jl:192\n",
-      "  [4] produce_or_load(f::typeof(TaylorCoefInversion), config::Dict{String, Any}, path::String; suffix::String, prefix::String, tag::Bool, gitpath::String, loadfile::Bool, storepatch::Bool, force::Bool, verbose::Bool, wsave_kwargs::@NamedTuple{}, wload_kwargs::@NamedTuple{}, filename::var\"#348#349\"{String, Dict{String, Any}}, kwargs::@Kwargs{})\n",
-      "    @ DrWatson ~/.julia/packages/DrWatson/dUlaU/src/saving_files.jl:108\n",
-      "  [5] myProduceOrLoad(functionName::Function, paramDict::Dict{String, Any}, directoryName::String, prefixName::String)\n",
-      "    @ Main ~/Documents/Github/flexibleDSM/OPTmotors/src/batchDrWatson.jl:27\n",
-      "  [6] myProduceOrLoad(functionName::Function, paramDict::Dict{String, Any}, directoryName::String)\n",
-      "    @ Main ~/Documents/Github/flexibleDSM/OPTmotors/src/batchDrWatson.jl:13\n",
-      "  [7] AuSymbolic(coordinates::Tuple{Num, Num, Num}, multiOrdersIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, pointsIndices::Array{Vector{Int64}, 3}, multiPointsIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, middleLinearν::Int64, Δ::Tuple{Float64, Float64, Float64}, varM::Matrix{Any}, bigα::Matrix{Any}, orderBspline::Vector{Int64}, WorderBspline::Vector{Int64}, NtypeofExpr::Int64, NtypeofFields::Int64)\n",
-      "    @ Main ~/Documents/Github/flexibleDSM/OPTmotors/src/OPTnewEngines.jl:896\n",
-      "  [8] OPTobj(exprs::Num, fields::Num, vars::Num; coordinates::Tuple{Num, Num, Num}, TaylorOptions::@NamedTuple{WorderBtime::Int64, WorderBspace::Int64, supplementaryOrder::Int64}, trialFunctionsCharacteristics::@NamedTuple{orderBtime::Int64, orderBspace::Int64, pointsInSpace::Int64, pointsInTime::Int64}, CˡηSymbolicInversion::Bool, testOnlyCentre::Bool, Δnum::Tuple{Float64, Float64, Float64}, iExperiment::Int64)\n",
-      "    @ Main ~/Documents/Github/flexibleDSM/OPTmotors/src/OPTnewEngines.jl:838\n",
-      "  [9] macro expansion\n",
-      "    @ ./timing.jl:581 [inlined]\n",
-      " [10] OPTobj(operatorConfigurations::Dict{String, Any})\n",
-      "    @ Main ~/Documents/Github/flexibleDSM/OPTmotors/src/OPTnewEngines.jl:610\n",
-      " [11] produce_or_load(f::typeof(OPTobj), config::Dict{String, Any}, path::String; suffix::String, prefix::String, tag::Bool, gitpath::String, loadfile::Bool, storepatch::Bool, force::Bool, verbose::Bool, wsave_kwargs::@NamedTuple{}, wload_kwargs::@NamedTuple{}, filename::var\"#348#349\"{String, Dict{String, Any}}, kwargs::@Kwargs{})\n",
-      "    @ DrWatson ~/.julia/packages/DrWatson/dUlaU/src/saving_files.jl:108\n",
-      " [12] myProduceOrLoad(functionName::Function, paramDict::Dict{String, Any}, directoryName::String, prefixName::String)\n",
-      "    @ Main ~/Documents/Github/flexibleDSM/OPTmotors/src/batchDrWatson.jl:27\n",
-      " [13] myProduceOrLoad(functionName::Function, paramDict::Dict{String, Any}, directoryName::String)\n",
-      "    @ Main ~/Documents/Github/flexibleDSM/OPTmotors/src/batchDrWatson.jl:13\n",
-      " [14] makeCompleteCostFunctions(concreteModelParameters::Dict{String, Any})\n",
-      "    @ Main ~/Documents/Github/flexibleDSM/OPTmotors/src/OPTwrappers.jl:22\n",
-      " [15] produce_or_load(f::typeof(makeCompleteCostFunctions), config::Dict{String, Any}, path::String; suffix::String, prefix::String, tag::Bool, gitpath::String, loadfile::Bool, storepatch::Bool, force::Bool, verbose::Bool, wsave_kwargs::@NamedTuple{}, wload_kwargs::@NamedTuple{}, filename::var\"#348#349\"{String, Dict{String, Any}}, kwargs::@Kwargs{})\n",
-      "    @ DrWatson ~/.julia/packages/DrWatson/dUlaU/src/saving_files.jl:108\n",
-      " [16] myProduceOrLoad(functionName::Function, paramDict::Dict{String, Any}, directoryName::String, prefixName::String)\n",
-      "    @ Main ~/Documents/Github/flexibleDSM/OPTmotors/src/batchDrWatson.jl:27\n",
-      " [17] top-level scope\n",
-      "    @ ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X14sZmlsZQ==.jl:1"
+      "modifiedμ[iCoord] = output[\"modμ\"] = "
      ]
     }
    ],
    "source": [
-    "opt = myProduceOrLoad(makeCompleteCostFunctions,concreteModelParameters,\"numOperators\",\"quasiNum\")\n",
-    "ProfileView.view()"
+    "@profilehtml opt = myProduceOrLoad(makeCompleteCostFunctions,concreteModelParameters,\"numOperators\",\"quasiNum\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b607b0e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Warning: The profile data buffer is full; profiling probably terminated\n",
+      "│ before your program finished. To profile for longer runs, call\n",
+      "│ `Profile.init()` with a larger buffer and/or larger delay.\n",
+      "└ @ Profile /Users/nobuaki/.julia/juliaup/julia-1.11.7+0.aarch64.apple.darwin14/share/julia/stdlib/v1.11/Profile/src/Profile.jl:641\n",
+      "┌ Info: Wrote profiling output to file:///Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/statprof/index.html .\n",
+      "└ @ StatProfilerHTML /Users/nobuaki/.julia/packages/StatProfilerHTML/WyFko/src/StatProfilerHTML.jl:27\n"
+     ]
+    }
+   ],
+   "source": [
+    "statprofilehtml()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "36896bb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Process(`\u001b[4mopen\u001b[24m \u001b[4m/Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/statprof/index.html\u001b[24m`, ProcessExited(0))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "using InteractiveUtils\n",
+    "run(`open /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/statprof/index.html`)  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5ffc395",
+   "id": "9182caf9",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "98210640",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Warning: Crashed\n",
+      "│   err = ErrorException(\"boom!\")\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X21sZmlsZQ==.jl:15\n",
+      "┌ Info: Wrote profiling output to file:///Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/statprof/index.html .\n",
+      "└ @ StatProfilerHTML /Users/nobuaki/.julia/packages/StatProfilerHTML/WyFko/src/StatProfilerHTML.jl:27\n"
+     ]
+    }
+   ],
+   "source": [
+    "function buggy_function()\n",
+    "    s = 0\n",
+    "    for i in 1:10^7\n",
+    "        s += sin(i)\n",
+    "        if i == 5_000_000\n",
+    "            error(\"boom!\")\n",
+    "        end\n",
+    "    end\n",
+    "    return s\n",
+    "end\n",
+    "\n",
+    "try\n",
+    "    @profilehtml buggy_function()\n",
+    "catch err\n",
+    "    @warn \"Crashed\" err\n",
+    "end\n",
+    "\n",
+    "# Show the flamegraph in your browser\n",
+    "statprofilehtml()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a04dd5b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Process(`\u001b[4mopen\u001b[24m \u001b[4m/Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/statprof/index.html\u001b[24m`, ProcessExited(0))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "using InteractiveUtils\n",
+    "run(`open /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/statprof/index.html`)  "
+   ]
   }
  ],
  "metadata": {
