--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "85b7f81f",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n",
+      "┌ Warning: GPU backend not available: MethodError(Metal.MTL.devices, (), 0x0000000000006aac)\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchEnzyme.jl:31\n"
      ]
     },
     {
@@ -76,6 +78,7 @@
     "if isdefined(Main, :IJulia) || get(ENV, \"JULIA_EDITOR\", \"\") == \"code\"\n",
     "    # Use CairoMakie for inline if in notebook or VS Code\n",
     "    using CairoMakie\n",
+    "    #using WGLMakie\n",
     "else\n",
     "    using GLMakie\n",
     "end"
@@ -232,7 +235,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
+   "id": "7f90a668",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6000000000000001"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "maximum(models[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "6596fcab",
    "metadata": {},
    "outputs": [
@@ -259,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "13ddcb3b",
    "metadata": {},
    "outputs": [
@@ -279,8 +302,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "8861235b",
+   "execution_count": 15,
+   "id": "884a4dc6",
    "metadata": {},
    "outputs": [
     {
@@ -321,20 +344,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0a8e6de0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "safeget (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "safeget(A, inds...; default=0) = checkbounds(Bool, A, inds...) ? A[inds...] : default"
    ]
@@ -344,69 +357,27 @@
    "execution_count": null,
    "id": "2094e67a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Info: File /Users/nobuaki/Documents/Github/flexibleDSM/data/numOperators/quasiNum_f52922c2.jld2 does not exist. Producing it now...\n",
-      "└ @ DrWatson /Users/nobuaki/.julia/packages/DrWatson/dUlaU/src/saving_files.jl:106\n",
-      "┌ Info: File /Users/nobuaki/Documents/Github/flexibleDSM/data/semiSymbolics/semiSymbolics_f7d7f762.jld2 does not exist. Producing it now...\n",
-      "└ @ DrWatson /Users/nobuaki/.julia/packages/DrWatson/dUlaU/src/saving_files.jl:106\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(bigα, varM) = (Any[Any[(node = -(v(x, y)^2), nᶜ = CartesianIndex(1, 1, 1), n = CartesianIndex(3, 1, 1)), (node = -(v(x, y)^2), nᶜ = CartesianIndex(1, 1, 1), n = CartesianIndex(1, 3, 1)), (node = 1, nᶜ = CartesianIndex(1, 1, 1), n = CartesianIndex(1, 1, 3))];;], Any[v₁ v₂ v₃ v₄ v₅ v₆ v₇ v₈ v₉ v₁ v₂ v₃ v₄ v₅ v₆ v₇ v₈ v₉ v₁ v₂ v₃ v₄ v₅ v₆ v₇ v₈ v₉])\n",
-      "modifiedμ[iCoord] = output[\"modμ\"] = "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "@profilehtml opt = myProduceOrLoad(makeCompleteCostFunctions,concreteModelParameters,\"numOperators\",\"quasiNum\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "b607b0e4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Warning: The profile data buffer is full; profiling probably terminated\n",
-      "│ before your program finished. To profile for longer runs, call\n",
-      "│ `Profile.init()` with a larger buffer and/or larger delay.\n",
-      "└ @ Profile /Users/nobuaki/.julia/juliaup/julia-1.11.7+0.aarch64.apple.darwin14/share/julia/stdlib/v1.11/Profile/src/Profile.jl:641\n",
-      "┌ Info: Wrote profiling output to file:///Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/statprof/index.html .\n",
-      "└ @ StatProfilerHTML /Users/nobuaki/.julia/packages/StatProfilerHTML/WyFko/src/StatProfilerHTML.jl:27\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "statprofilehtml()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "36896bb6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Process(`\u001b[4mopen\u001b[24m \u001b[4m/Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/statprof/index.html\u001b[24m`, ProcessExited(0))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "using InteractiveUtils\n",
     "run(`open /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/statprof/index.html`)  "
@@ -422,22 +393,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "98210640",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Warning: Crashed\n",
-      "│   err = ErrorException(\"boom!\")\n",
-      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X21sZmlsZQ==.jl:15\n",
-      "┌ Info: Wrote profiling output to file:///Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/statprof/index.html .\n",
-      "└ @ StatProfilerHTML /Users/nobuaki/.julia/packages/StatProfilerHTML/WyFko/src/StatProfilerHTML.jl:27\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "function buggy_function()\n",
     "    s = 0\n",
@@ -462,20 +421,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "a04dd5b1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Process(`\u001b[4mopen\u001b[24m \u001b[4m/Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/statprof/index.html\u001b[24m`, ProcessExited(0))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "using InteractiveUtils\n",
     "run(`open /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/statprof/index.html`)  "
